// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TagList should match snapshot with props 1`] = `
<DocumentFragment>
  <div
    class="ui small labels tags"
  >
    <div
      class="ui label"
    >
      <i
        aria-hidden="true"
        class="star icon"
      />
      13
    </div>
    <div
      class="ui label"
    >
      <i
        aria-hidden="true"
        class="fork icon"
      />
      1
    </div>
    <div
      class="ui label"
    >
      <i
        aria-hidden="true"
        class="eye icon"
      />
      42
    </div>
    <div
      class="ui label"
    >
      test
    </div>
  </div>
</DocumentFragment>
`;

exports[`TagList should match snapshot without props 1`] = `
<DocumentFragment>
  <div
    class="ui small labels tags"
  >
    <div
      class="ui label"
    >
      <i
        aria-hidden="true"
        class="star icon"
      />
      0
    </div>
    <div
      class="ui label"
    >
      <i
        aria-hidden="true"
        class="fork icon"
      />
      0
    </div>
    <div
      class="ui label"
    >
      <i
        aria-hidden="true"
        class="eye icon"
      />
      0
    </div>
  </div>
</DocumentFragment>
`;
